--- a/FoodTrip/FoodTrip.Api/appsettings.Development.json
+++ b/FoodTrip/FoodTrip.Api/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Urls": "https://localhost:5114",
+  "JwtSettings": {
+    "Secret": "",
+    "ExpiryMinutes": 0,
+    "Issuer": "",
+    "Audience": ""
   }
 }
