--- a/FoodTrip/FoodTrip.Api/appsettings.json
+++ b/FoodTrip/FoodTrip.Api/appsettings.json
@@ -6,5 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-  "Urls": "https://localhost:5114"
+  "Urls": "https://localhost:5114",
+  "JwtSettings": {
+    "Secret": "",
+    "ExpiryMinutes": 0,
+    "Issuer": "",
+    "Audience": ""
+  }
 }
